--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,10 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+          "styles": [
+  "src/styles.scss"
+]
+,
             "scripts": []
           },
           "configurations": {
@@ -90,9 +91,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+           "styles": [
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "src/styles.css"
+            ]
+            ,
             "scripts": []
           }
         }
